i#116420, fdo#33477: Implemented VertOrient on Writer table cell ranges